add clue in case it's gone

--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
     <main>
       <p>In theory you need none of these.</p>
       <details>
+         <summary>I lost the clue!</summary>
+<pre>
+I have hidden an item in BDL. Want to find it? Find a purple sign at your gate.
+
+Start with "Let's have a SAFE" 
+Hint: spaces and punctuation count.
+
+
+50, 32, 79, 2, 55, 6, 55, 2, 79, 6, 5, 43, 44, 32, 6, 5, 8, 35, 5, 6, 32, 2, 2, 79, 6, 7, 2, 1, 63
+
+Side with only one :)
+Good luck, have fun!
+</pre>
+      </details>
+      <details>
         <summary>Hint 1: "I can't find the sign you're talking about"</summary>
         <p>Good thing I took a photo of it</p>
         <img src="sign.jpeg" />
@@ -54,7 +69,7 @@
    // disable all details
    // check if date is the 26th in current time zone
    const currentDate = new Date();
-   const is26th = currentDate.getDate() === 26;
+   //const is26th = currentDate.getDate() === 26;
 
    // disable details if it's not the 26th
    if (is26th) {
